# Algoverse-VNAA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: kaggle_slice1.md  make_figures.py  setup_gpu.sh
src/vnaa/: baselines.py  data.py  extract.py  probe.py  run_slice1.py
tests/: render_separation_svg.py  smoke_extract.py  test_probe.py  visualize_separation.py
